--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/vo55my/DocsMorpher#readme",
   "dependencies": {
     "aos": "^2.3.4",
-    "bootstrap": "^5.3.0",
+    "gsap": "^3.11.5",
     "lazysizes": "^5.3.2",
     "lodash.filter": "^4.6.0",
     "regenerator-runtime": "^0.13.11"
@@ -35,7 +35,10 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.1",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.84.1",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.1",
