--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint ./src",
-    "server": "node server.js",
-    "build-server": "npm run start-dev && npm run server"
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
