--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "lazysizes": "^5.3.2",
-    "regenerator-runtime": "^0.13.11"
+    "regenerator-runtime": "^0.13.11",
+    "workbox-window": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
@@ -47,6 +48,7 @@
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
